--- a/BoardEx/WebContent/WEB-INF/handler.properties
+++ b/BoardEx/WebContent/WEB-INF/handler.properties
@@ -1,5 +1,5 @@
 /board/insert.do=handler.InsertBoardHandler
 /board/list.do=handler.ListBoardHandler
 /board/select.do=handler.SelectBoardHandler
-#/board/select.do=
-#/board/select.do=
+/board/update.do=handler.UpdateBoardHandler
+/board/delete.do=handler.DeleteBoardHandler
