add search process

--- a/BoardEx/WebContent/WEB-INF/handler.properties
+++ b/BoardEx/WebContent/WEB-INF/handler.properties
@@ -3,3 +3,4 @@
 /board/select.do=handler.SelectBoardHandler
 /board/update.do=handler.UpdateBoardHandler
 /board/delete.do=handler.DeleteBoardHandler
+/board/search.do=handler.SearchBoardHandler
